# simple_robot_custom_ctlr

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: custom_diff_drive.yaml  simple_diff_drive_gazebo_control_params.yaml  simple_vel_control.yaml
controller_template_extern/: DifferentialDriveControllerTemplate.slx
launch/: simple_robot_custom_ctlr.launch
rviz/: urdf.rviz
urdf/: materials.xacro  simple_robot_custom_ctlr.gazebo  simple_robot_custom_ctlr.xacro
worlds/: simple_world.world
